--- a/blog-app-apis/src/main/resources/application.properties
+++ b/blog-app-apis/src/main/resources/application.properties
@@ -21,6 +21,6 @@ project.image = images/
 
 logging.level.org.springframework.security=DEBUG
 
-spring.security.user.name= tanmay
+spring.security.user.name= tanmaygoel
 spring.security.user.password= tanmay@1999
 spring.security.user.roles=ADMIN
